--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Publisher Test Page</title>
-    <script src="bundle.js"></script>
+    <script src="https://gitlab.epti.com/workamo/workamo-validation-widget/-/blob/master/dist/bundle.js"></script>
   </head>
   <body>
     <!-- Set placeholder and submit button text -->
