--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Publisher Test Page</title>
-    <script src="https://pvn-dev.workamo.com/"></script>
+    <script src="https://pvn-dev.workamo.com"></script>
   </head>
   <body>
     <!-- Set placeholder and submit button text -->
