--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Publisher Test Page</title>
-  <script src="https://pvn-dev.workamo.com/bundle.js"></script>
+  <script src="https://pvn-test.workamo.com/bundle.js"></script>
 </head>
 
 <body>
